gcc/testsuite/rust/rustc/ui/parser/issue-19398.rs
trait T {
    extern "Rust" unsafe fn foo();
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

